2019-05-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox-local: Use g_ptr_array_new_with_free_func() to manage
	deallocation of threading_info structures.

	* libbalsa/mailbox_local.c
	(libbalsa_mailbox_local_set_threading_info),
	(libbalsa_mailbox_local_msgno_removed)

2019-05-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Use g_ptr_array_new_with_free_func() to manage
	deallocation of LibBalsaMailboxIndexEntry.

	* libbalsa/mailbox.c (lbm_index_entry_free),
	(libbalsa_mailbox_free_mindex), (libbalsa_mailbox_open),
	(libbalsa_mailbox_msgno_removed)

2019-05-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox-mbox: Use g_ptr_array_new_with_free_func() to manage
	deallocation of message_info structures.

	* libbalsa/mailbox_mbox.c (free_message_info): refactor;
	(libbalsa_mailbox_mbox_open): use g_ptr_array_new_with_free_func()
	instead of g_ptr_array_new();
	(libbalsa_mailbox_mbox_check),
	(libbalsa_mailbox_mbox_close_mailbox),
	(libbalsa_mailbox_mbox_sync): no need to manually deallocate.

2019-04-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	address-view: drop almost duplicate code

	* libbalsa/address-view.c (lbav_insert_text_cb): use
	lbav_clean_text to replace non-printable chars by spaces,
	instead of using almost duplicative code.

2019-04-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	send: Fix a compiler warning

	* libbalsa/send.c (libbalsa_set_message_id): strncpy() with n ==
	sizeof(dest) generates:
	"error: ‘__builtin_strncpy’ specified bound 16 equals
	destination size [-Werror=stringop-truncation]"
	We now specify one fewer bytes, and explicitly nullify the last
	byte.

2019-04-18  Albrecht Dreß  <albrecht.dress@arcor.de>

	Fix the build after commit e92ec3140a1c81dbf86d90d0155cb2e08f519db2

	* src/main-window.c (bw_update_progress_bar): cast with
	'(GSourceFunc)', not with 'G_SOURCE_FUNC()', since we do not yet
	require GLib 2.58!

2019-04-18  Albrecht Dreß  <albrecht.dress@arcor.de>
